<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_text"
        android:layout_gravity="start"
        android:text="@string/create_poll_title"
        android:textSize="@dimen/size_title"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/question_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/question_title"
                android:textSize="@dimen/size_body"
                />

            <EditText
                android:id="@+id/question"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/start_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_time"
                    android:textSize="@dimen/size_body"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <CheckBox
                    android:id="@+id/now_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now"
                    app:layout_constraintStart_toEndOf="@+id/start_time_title"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/start_date_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:visibility="visible"
                    app:layout_constraintEnd_toStartOf="@+id/start_time_edit_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/now_check_box" />

                <EditText
                    android:id="@+id/start_time_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/start_date_edit_text"
                    app:layout_constraintTop_toBottomOf="@+id/now_check_box" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/end_time_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/end_time"
                    android:textSize="@dimen/size_body"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/end_date_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    app:layout_constraintEnd_toStartOf="@+id/end_time_edit_text"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/end_time_title" />

                <EditText
                    android:id="@+id/end_time_edit_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="time"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/end_date_edit_text"
                    app:layout_constraintTop_toBottomOf="@+id/end_time_title" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <RadioButton
                    android:id="@+id/radio_poll_type_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/poll_type_1" />

                <RadioButton
                    android:id="@+id/radio_poll_type_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/poll_type_2" />

            </RadioGroup>

            <TextView
                android:id="@+id/choices_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choices_title"
                android:textSize="@dimen/size_body"
                />

            <ListView
                android:id="@+id/choices_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/schedule_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_schedule"
                    app:layout_constraintEnd_toStartOf="@+id/open_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/open_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_open"
                    app:layout_constraintEnd_toStartOf="@+id/cancel_button"
                    app:layout_constraintStart_toEndOf="@+id/schedule_button"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/open_button"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>