<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_meeting_event"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/tab_home"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <include
        layout="@layout/tab_connect_launch"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/guideline_horizontal_tab" />

    <LinearLayout
        android:id="@+id/meeting_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/guideline_horizontal">

        <TextView
            android:id="@+id/meeting_event_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_meeting_event"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/meeting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/meeting_event_title">

        <EditText
            android:id="@+id/title_text"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/meeting_title_required" />

        <TextView
            android:id="@+id/textView_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_body"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/meeting_title">

        <EditText
            android:id="@+id/editText1"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/start_date_required" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_date" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:textSize="@dimen/size_body"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/start_date">

        <EditText
            android:id="@+id/text_start_time"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/start_time_required" />

        <Button
            android:id="@+id/button_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_time" />

        <TextView
            android:id="@+id/textView_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_body"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/start_time">

        <EditText
            android:id="@+id/editText2"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/end_date_optional" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_date" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_body"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/end_date">

        <EditText
            android:id="@+id/text_end_time"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/start_time_required" />

        <Button
            android:id="@+id/button_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_time" />

        <TextView
            android:id="@+id/textView_end_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_body"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        app:layout_constrainedHeight="true"
        app:layout_constraintTop_toBottomOf="@id/end_time">

        <EditText
            android:id="@+id/text_location"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/location_optional" />

        <TextView
            android:id="@+id/textView_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/size_body"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/confirm_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>